--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <Title>
     Cloud Practical Examination
-  </head>
+  </title>
   <body>
     Welcome to the Cloud World
   </body>
